<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp"
    android:background="@color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="7dp">

        <TextView
            android:id="@+id/text_view_plant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            android:textSize="27sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_view_plant_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_img"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/text_view_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="22sp"/>


    </LinearLayout>


</LinearLayout>