<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    android:background="@color/backgroundGreen">

  <ImageView
      android:id="@+id/imageView"
      android:layout_marginTop="25dp"
      android:layout_width="180dp"
      android:layout_height="200dp"
      app:srcCompat="@drawable/tree2" />


  <TextView
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:shadowColor="@color/black"
      android:shadowDx="2"
      android:shadowDy="2"
      android:shadowRadius="1.5"
      android:text="Plant Tracker"
      android:textAllCaps="true"
      android:textColor="@color/green"
      android:textSize="40dp" />


  <Button
      android:id="@+id/StartBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="24dp"
      android:text="@string/start"/>

  <Button
      android:id="@+id/PlantListBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="24dp"
      android:text="@string/plant_list"/>

  <Button
        android:id="@+id/settingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/settings"/>

</LinearLayout>